<resources>
    <string name="app_name">daihatsu</string>
    <!-- Splash Activity  -->
    <string name="splash1">Logo Astra Daihatsu</string>
    <string name="splash2">Logo Astra Daihatsu</string>
    <string name="splash3">Copyright © 2021 The Pioneer One - All right reserved </string>
    <!-- Login Activity  -->
    <string name="login1">Logo Astra Daihatsu</string>
    <string name="login2">Login</string>
    <string name="login3">Email</string>
    <string name="login4">Password</string>
    <string name="login5">Tombol Login</string>
    <!-- Bottom Navigation Menu  -->
    <string name="menu1">Home</string>
    <string name="menu2">My Order</string>
    <string name="menu3">Contact Us</string>
    <string name="menu4">Profile</string>

    <!-- Home  -->
    <string name="home1">Spesial Promo</string>
    <string name="home2">Diskon untuk semua produk Daihatsu Astra periode tahun 2021</string>
    <string name="home3">Senin, 26&#8211;06&#8211;2020</string>
    <string name="home4">Tombol Next</string>
    <string name="home5">BOOKING</string>
    <string name="home6">SERVICE</string>
    <string name="home7">Logo Icon</string>
    <string name="home8">ONEDAY</string>
    <string name="home9">KLAIM</string>
    <string name="home10">ASURANSI</string>
    <string name="home11">NEWS &amp;</string>
    <string name="home12">PROMO</string>
    <string name="home13">PICKUP</string>
    <string name="home14">SERVICE</string>
    <string name="home15">DATA</string>
    <string name="home16">KENDARAAN</string>
    <!-- Order  -->

    <!-- Inbox  -->

    <!-- Profil  -->
    <string name="profil1">Profile</string>
    <string name="profil2">Alexsander Hendra Wijaya</string>
    <string name="profil3">0823 7140 8678</string>
    <string name="profil4">info@alexistdev.com</string>
    <string name="profil5">Icon Edit</string>
    <string name="profil6">Alamat</string>
    <string name="profil7">Gang Mawar Coklat, no E2</string>
    <string name="profil8">sidodadi,pagelaran,pringsewu,bandarlampung</string>
    <string name="profil9">Lampung</string>
    <string name="profil10">Data Kendaraan</string>
    <string name="profil11">Tentang Kami</string>
    <string name="profil12">Kebijakan Privacy</string>
    <string name="profil13">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>