<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_splash"
    tools:context=".ui.login">
    <ImageView
        android:src="@drawable/logo_daihatsu"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:contentDescription="@string/login1"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/layout_login"
        android:background="@drawable/bg_login"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="400dp">
        <TextView
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/loginText"
            android:text="@string/login2"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/txt_email"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/loginText"
            android:textColorHint="@color/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login3"
            android:autofillHints="@string/login3"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/txt_password"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/loginText"
            android:textColorHint="@color/loginText"
            android:hint="@string/login4"
            android:autofillHints="@string/login4"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/tombol_login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/login5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tombol_login"/>

    </LinearLayout>
</RelativeLayout>