<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.akun_fragment">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bgbtToolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/profil1"
            app:titleTextColor="@color/white"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutKonten"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/warnaAbu"
            android:id="@+id/scroll1">
            <LinearLayout
                android:id="@+id/linier1"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rect1"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="16dp">
                        <TextView
                            android:id="@+id/tvNamaUser"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5sp"
                            android:layout_marginEnd="10sp"
                            android:background="#0000"
                            android:gravity="center_vertical"
                            android:text="@string/profil2"
                            android:textSize="18sp" />
                        <TextView
                            android:id="@+id/tvPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5sp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10sp"
                            android:background="#0000"
                            android:text="@string/profil3"
                            android:textSize="12sp" />
                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5sp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10sp"
                            android:background="#0000"
                            android:text="@string/profil4"
                            android:textSize="12sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="6"
                        android:paddingTop="16dp">
                        <ImageButton
                            android:id="@+id/editAkun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/ic_edit"
                            android:contentDescription="@string/profil5" />
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:background="#0000"
                        android:text="@string/profil6"/>
                    <TextView
                        android:id="@+id/txtAlamat1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:textSize="14sp"
                        android:text="@string/profil7"/>
                    <TextView
                        android:id="@+id/txtKecKab"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:textSize="14sp"
                        android:text="@string/profil8"/>
                    <TextView
                        android:id="@+id/txtProvinsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#0000"
                        android:textSize="14sp"
                        android:text="@string/profil9"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linier2"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/rect1"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
                <!--   BANTUAN -->
                <LinearLayout
                    android:id="@+id/linierBantuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:gravity="center|start"
                        android:padding="15dp"
                        android:text="@string/profil10"
                        app:drawableEndCompat="@drawable/ic_chevron" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
                <!--    KETENTUAN LAYANAN-->
                <LinearLayout
                    android:id="@+id/linierketentuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:gravity="center|start"
                        android:padding="15dp"
                        android:text="@string/profil11"
                        app:drawableEndCompat="@drawable/ic_chevron" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
                <!--  PENGIRIMAN -->
                <LinearLayout
                    android:id="@+id/linierpengiriman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:gravity="center|start"
                        android:padding="15dp"
                        android:text="@string/profil12"
                        app:drawableEndCompat="@drawable/ic_chevron" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linier3"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@drawable/rect1"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:background="@color/bgbtToolbar"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/profil13"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>